<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.vincent.yatmdbvandenryse.activities.mainActivity.MainActivity">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="368dp"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp">

                <android.support.design.widget.BottomNavigationView
                    android:id="@+id/navigation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="?android:attr/windowBackground"
                    app:menu="@menu/navigation"
                    tools:layout_editor_absoluteX="221dp"
                    tools:layout_editor_absoluteY="537dp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/popularRecycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlHardcoded"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="parent">

            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:layout_gravity="start"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/ly_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="31dp">

            <EditText
                android:id="@+id/txt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@android:string/search_go"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorGrey"
                android:textColorHint="@color/colorGrey"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_search">

                <Button
                    android:id="@+id/bt_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/search_go"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_search" />

                <Button
                    android:id="@+id/bt_clearSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    tools:layout_editor_absoluteX="272dp"
                    tools:layout_editor_absoluteY="265dp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoryChoice"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie" />

        <Button
            android:id="@+id/bt_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvshow" />

        <Button
            android:id="@+id/bt_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="favorite"
            android:text="@string/fav_tb" />

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
